--- a/Split It!/MainPage.xaml
+++ b/Split It!/MainPage.xaml
@@ -18,22 +18,30 @@
             <!--Pivot item one-->
             <phone:PivotItem Header="{Binding Path=LocalizedResources.Dashboard, Source={StaticResource LocalizedStrings}}">
                 <Grid Background="White">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    
-                    <TextBlock x:Name="tbName" Foreground="Black" Text="Saurabh" Grid.Column="1" FontSize="{StaticResource nameSize}"/>
-                    <Grid Grid.Column="2">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
+                    <phone:LongListSelector Name="llsFriends" Margin="12,0,12,0">
+                        <phone:LongListSelector.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Margin="0,0,0,15">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
 
-                        <TextBlock x:Name="tbDescription" Foreground="Black" Text="owes you" Grid.Row="0" FontSize="{StaticResource descriptionSize}"/>
-                        <TextBlock x:Name="tbAmount" Foreground="Black" Text="SGD 31.10" Grid.Row="1" FontSize="{StaticResource amountSize}"/>
-                    </Grid>
+                                    <TextBlock x:Name="tbName" Foreground="Black" Text="{Binding first_name}" Grid.Column="1" FontSize="{StaticResource nameSize}" VerticalAlignment="Center"/>
+                                    <Grid Grid.Column="2">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height="*"/>
+                                        </Grid.RowDefinitions>
+
+                                        <TextBlock x:Name="tbDescription" Foreground="Black" Text="owes you" Grid.Row="0" FontSize="{StaticResource descriptionSize}"/>
+                                        <TextBlock x:Name="tbAmount" Foreground="Black" Text="SGD 31.10" Grid.Row="1" FontSize="{StaticResource amountSize}"/>
+                                    </Grid>
+                                </Grid>
+                            </DataTemplate>
+                        </phone:LongListSelector.ItemTemplate>
+                    </phone:LongListSelector>
                 </Grid>
             </phone:PivotItem>
 
@@ -43,5 +51,5 @@
             </phone:PivotItem>
         </phone:Pivot>
     </Grid>
-    
+
 </phone:PhoneApplicationPage>
