--- a/Split It!/MainPage.xaml
+++ b/Split It!/MainPage.xaml
@@ -12,16 +12,16 @@
     shell:SystemTray.IsVisible="false">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="{StaticResource splitwiseGreyBG}">
+    <Grid x:Name="LayoutRoot" Background="{StaticResource splitwiseGreen}">
         <!--Pivot Control-->
-        <phone:Pivot Title="{Binding Path=LocalizedResources.ApplicationTitle, Source={StaticResource LocalizedStrings}}" Foreground="Black">
+        <phone:Pivot Title="{Binding Path=LocalizedResources.ApplicationTitle, Source={StaticResource LocalizedStrings}}" Foreground="White">
             <!--Pivot item one-->
-            <phone:PivotItem Header="{Binding Path=LocalizedResources.Dashboard, Source={StaticResource LocalizedStrings}}">
+            <phone:PivotItem Margin="0,5,0,0" Header="{Binding Path=LocalizedResources.Dashboard, Source={StaticResource LocalizedStrings}}">
                 <Grid Background="White">
-                    <phone:LongListSelector Name="llsFriends" Margin="12,0,12,0">
+                    <phone:LongListSelector Name="llsFriends">
                         <phone:LongListSelector.ItemTemplate>
                             <DataTemplate>
-                                <Grid Margin="0,0,0,15">
+                                <Grid Margin="12,0,12,15">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto"/>
                                         <ColumnDefinition Width="*"/>
@@ -35,8 +35,8 @@
                                             <RowDefinition Height="*"/>
                                         </Grid.RowDefinitions>
 
-                                        <TextBlock x:Name="tbDescription" Foreground="Black" Text="owes you" Grid.Row="0" FontSize="{StaticResource descriptionSize}"/>
-                                        <TextBlock x:Name="tbAmount" Foreground="Black" Text="SGD 31.10" Grid.Row="1" FontSize="{StaticResource amountSize}"/>
+                                        <TextBlock x:Name="tbDescription" Foreground="Black" Text="{Binding description}" Grid.Row="0" FontSize="{StaticResource descriptionSize}" HorizontalAlignment="Center"/>
+                                        <TextBlock x:Name="tbAmount" Foreground="Black" Text="{Binding}" Grid.Row="1" FontSize="{StaticResource amountSize}"/>
                                     </Grid>
                                 </Grid>
                             </DataTemplate>
