--- a/Split It!/MainPage.xaml
+++ b/Split It!/MainPage.xaml
@@ -21,13 +21,13 @@
                     <phone:LongListSelector Name="llsFriends">
                         <phone:LongListSelector.ItemTemplate>
                             <DataTemplate>
-                                <Grid Margin="12,0,12,15">
+                                <Grid Margin="12,15,12,15">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto"/>
                                         <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
-
+                                    <Image Grid.Column="0" Source="{Binding imageUrl}" VerticalAlignment="Center" Width="75" Height="75" Margin="0,0,15,0"/>
                                     <TextBlock x:Name="tbName" Foreground="Black" Text="{Binding first_name}" Grid.Column="1" FontSize="{StaticResource nameSize}" VerticalAlignment="Center"/>
                                     <Grid Grid.Column="2">
                                         <Grid.RowDefinitions>
@@ -35,8 +35,8 @@
                                             <RowDefinition Height="*"/>
                                         </Grid.RowDefinitions>
 
-                                        <TextBlock x:Name="tbDescription" Foreground="Black" Text="{Binding description}" Grid.Row="0" FontSize="{StaticResource descriptionSize}" HorizontalAlignment="Center"/>
-                                        <TextBlock x:Name="tbAmount" Foreground="Black" Text="{Binding}" Grid.Row="1" FontSize="{StaticResource amountSize}"/>
+                                        <TextBlock x:Name="tbDescription" Foreground="Black" Text="{Binding description}" Grid.Row="0" FontSize="{StaticResource descriptionSize}" HorizontalAlignment="Left"/>
+                                        <TextBlock x:Name="tbAmount" Foreground="Black" Text="{Binding}" Grid.Row="1" FontSize="{StaticResource amountSize}" HorizontalAlignment="Left"/>
                                     </Grid>
                                 </Grid>
                             </DataTemplate>
