--- a/Split_It/App.xaml
+++ b/Split_It/App.xaml
@@ -67,8 +67,7 @@
 
         <!--Colors-->
         <SolidColorBrush x:Key="splitwiseGreen">#5BC5A7</SolidColorBrush>
-        <Color x:Key="black">#000000</Color>
-        <Color x:Key="white">#FFFFFF</Color>
+        <Color x:Key="green">#5BC5A7</Color>
         <SolidColorBrush x:Key="negative">#FC7F53</SolidColorBrush>
         <SolidColorBrush x:Key="positive">#5BC5A7</SolidColorBrush>
         <SolidColorBrush x:Key="settled">#ABABAB</SolidColorBrush>
