--- a/Split_It/UserDetails.xaml
+++ b/Split_It/UserDetails.xaml
@@ -29,7 +29,7 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="0,5,0,0" Background="White">
-
+            <phone:LongListSelector Name="llsExpenses" ItemTemplate="{StaticResource expensesTemplate}"/>
         </Grid>
     </Grid>
 
